--- a/Style/detail.css
+++ b/Style/detail.css
@@ -1,62 +1,45 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html[data-theme="light"] {
-    --bg-color: rgba(128, 128, 128, 0.021);
-    --color: rgba(0, 0, 0, 0.795);
-}
-
-html[data-theme="dark"] {
-    --bg-color: rgba(0, 0, 0, 0.795);
-    --color: white;
-}
-
-body {
-    color: var(--color);
-    background-color: var(--bg-color);
-}
-
-.head {
+.detail__div__div__div {
     display: flex;
-    justify-content: space-between;
-    padding: 3vh 5vw;
-    width: 95vw;
-    height: 14vh;
-    background-color: var(--bg-color);
-    opacity: 0.5;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562443);
-    border: 1px solid rgba(rgba(255, 0, 0, 0), green, blue, alpha);
-    z-index: 65;
-}
-
-.back:focus {
-    outline: none;
-}
-
-.back {
-    margin-left: 7vw;
-}
-
-main {
-    display: flex;
-    justify-content: space-evenly;
-    gap: 20px;
-    width: 80vw;
-    margin-top: 5vh;
-}
-
-.info {
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    justify-content: space-between;
-}
-
-.info-base {
-    display: flex;
-    gap: 50px;
-}
+   flex-direction: row;
+  }
+  .borders {
+    margin-top: 68px;
+  }
+  .borders > b {
+    font-family: "Nunito Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+    margin-right: 16px;
+    color: #111517;
+  }
+  .borders > span {
+    display: inline-block;
+    background: #ffffff;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.104931);
+    border-radius: 2px;
+    padding: 5px 28px;
+    margin-right: 10px;
+    font-family: "Nunito Sans";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 19px;
+    /* identical to box height */
+  
+    color: #111517;
+    margin-bottom: 10px;
+  }
+  .detail__img {
+    width: 560px;
+    height: 401px;
+    border-radius: 5px;
+  }
+  .dp-none {
+    display: none;
+  }
+  .back{
+    margin-bottom:5vh;
+  }
